--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 154,
    "id": "99f0cfff",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 155,
    "id": "5664138e",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 156,
    "id": "acd27ec2",
    "metadata": {},
    "outputs": [
@@ -60,10 +60,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x73a802b25370>"
+       "<matplotlib.image.AxesImage at 0x73af7c5d2030>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -168,55 +168,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "0a4ad79c",
+   "execution_count": 157,
+   "id": "45b4e0f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Batch2Col(batch: np.ndarray, kernel_shape: tuple[int, int]) -> np.ndarray:\n",
+    "def Batch2Col(batch: np.ndarray, kernel_shape: tuple[int, int], stride: tuple[int, int] = (1, 1)) -> np.ndarray:\n",
     "    Bs, Hin, Win, Cin = batch.shape\n",
     "    Kh, Kw = kernel_shape\n",
-    "\n",
-    "    Nh = Hin - Kh + 1\n",
-    "    Nw = Win - Kw + 1\n",
+    "    Sh, Sw = stride\n",
     "    \n",
-    "    new_batch = []\n",
-    "    for b in range(Bs):\n",
-    "        new_cols = []\n",
-    "        for i in range(Nh):\n",
-    "            for j in range(Nw):\n",
-    "                patch = np.reshape(batch[b, i:i + Kh, j:j + Kw, :], (Kh * Kw * Cin, 1))\n",
-    "                new_cols.append(patch)\n",
-    "        new_batch.append(np.concatenate(new_cols, axis=-1))\n",
-    "    new_batch = np.array(new_batch)\n",
+    "    Nh = (Hin - Kh) // Sh + 1\n",
+    "    Nw = (Win - Kw) // Sw + 1\n",
+    "    \n",
+    "    patches = np.lib.stride_tricks.as_strided(\n",
+    "        batch,\n",
+    "        shape=(Bs, Nh, Nw, Kh, Kw, Cin),\n",
+    "        strides=(batch.strides[0], Sh * batch.strides[1], Sw * batch.strides[2], batch.strides[1], batch.strides[2], batch.strides[3])\n",
+    "    )\n",
+    "    # (Bs, Kh, Kw, Cin, Nh, Nw)\n",
+    "    patches = patches.transpose(0, 3, 4, 5, 1, 2)\n",
+    "    new_batch = patches.reshape(Bs, Kh * Kw * Cin, Nh * Nw)\n",
     "\n",
     "    return new_batch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 158,
    "id": "ddd8c942",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Conv(batch: np.ndarray, Cin: int, kernel_size: tuple[int, int] = (3, 3), Cout: int = 1, pad: int = 0) -> np.ndarray:\n",
+    "def Conv(batch: np.ndarray, Cin: int, Cout: int, kernel_size: tuple[int, int] = (3, 3), pad: tuple[int, int] = (0, 0), stride: tuple[int, int] = (1, 1)) -> np.ndarray:\n",
     "    # __init__\n",
     "    Kh, Kw = kernel_size\n",
+    "    Ph, Pw = pad\n",
+    "    Sh, Sw = stride\n",
     "\n",
     "    in_kernel = np.zeros((Kh * Kw * Cin, Cout), dtype=np.float64)\n",
     "    in_kernel[:, :] = 1 / in_kernel.shape[0]\n",
     "\n",
     "    # __runtime__\n",
-    "    Bs, Hin, Win, _ = batch.shape\n",
-    "    padded_batch = np.zeros((Bs, Hin + pad * 2, Win + pad * 2, Cin), dtype=np.float64)\n",
-    "    padded_batch[:, pad:Hin + pad, pad:Win + pad, :] = batch\n",
+    "    padded_batch = np.pad(batch, ((0, 0), (Ph, Pw), (Pw, Ph), (0, 0)))\n",
     "    Bs, Hin, Win, _ = padded_batch.shape\n",
-    "    Nh = Hin - Kh + 1\n",
-    "    Nw = Win - Kw + 1\n",
+    "    Nh = (Hin - Kh) // Sh + 1\n",
+    "    Nw = (Win - Kw) // Sw + 1\n",
     "    \n",
     "\n",
-    "    BatchCols = Batch2Col(padded_batch, kernel_size)\n",
+    "    BatchCols = Batch2Col(padded_batch, kernel_size, (Sh, Sw))\n",
     "    BatchColsT = BatchCols.transpose((0, 2, 1))\n",
     "    \n",
     "    conv = np.matmul(BatchColsT, in_kernel)\n",
@@ -227,17 +227,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 159,
    "id": "cf36ea76",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x73a8017e3770>"
+       "<matplotlib.image.AxesImage at 0x73af7bd3cb90>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -274,7 +274,7 @@
     "\n",
     "img_batch = np.array([red_img, green_img])\n",
     "\n",
-    "new_img = Conv(img_batch, 3, (3, 3), 3, 1)\n",
+    "new_img = Conv(img_batch, 3, 3, (3, 3), (1, 1))\n",
     "\n",
     "fig, ax = plt.subplots(nrows=1, ncols=4, figsize=(18, 6))\n",
     "\n",
